2005-04-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-nummer-code.mf (code): add plus glyph.

	* lily/tie.cc (print): idem.

	* lily/slur.cc (print): don't use thickness property for
	slur shape-thickness.

	* lily/stencil-scheme.cc (LY_DEFINE): don't reverse the order
	while adding stencils.

	* scm/define-markup-commands.scm (with-color): with-color markup
	command.
	(whiteout): new markup command 
	(filled-box): new markup command

2005-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.tely (Top): Make tex-able.  Handy
	test for PDF docs.

	* mf/GNUmakefile (lilypond.map): Add PFAEmmentaler,
	PFAAybabtu-Regular.  Fixes feta font in PDFs.
	
	Notes for tetex-3.0 make web:
	   psclean.map: s/uhv8a/uhvr8a/
	   config.ps add:
		p +psfonts_t1.map
		p +psclean.map
		p +typeface.map

2005-04-06  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/music-functions.scm (music-pretty-string): fix bug with
	string argument.

2005-04-06  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* stepmake/bin/add-html-footer.py (i18n): Bugfix.

2005-04-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Lilypond_snippet.__init__): 
	only process options fi they're there.
	(write_file_map): add version-seen? to snippet-map.ly

2005-04-06  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* scripts/lilypond-book.py (split_options): Bugfix.  Small code
	formatting cleanups.

	* mf/GNUmakefile: Rewrite $addprefix, $addsuffix using % short-forms.
	Add PFAaybabtu.pfa dependency on aybabtu.subfonts.

2005-04-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (ps-font-command): don't hash, just use
	name directly.

	* lily/main.cc (setup_paths): either add mf/out to search path or 
	fonts/{otf,type1,etc}
	
	* lily/font-config.cc (init_fontconfig): either add mf/out to
	FontConfig or fonts/{otf,type1,etc}

	* GNUmakefile.in: don't put mf/ link in share/ dir.

	* lily/staff-spacing.cc: move same-direction-correction to